# StrongTypes

./: CMakeLists.txt  CMakeSettings.json  README.md
examples/: example.cpp  example.h
include/StrongTypes/: StrongTypes.h
src/: StrongTypes.cpp
tests/: StrongTypesTest.cpp
